<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/signup_background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/viewTransparent2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_orange_ripple"
        android:text="@string/create"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_black_ripple"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCreate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_ripple"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email_id"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutUserName"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutUserName"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextNewEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_ripple"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_new_password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutNewEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutNewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNewEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_ripple"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:longClickable="false"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNewPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_ripple"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:longClickable="false"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>